--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-quiz-component",
-  "version": "0.3.8",
+  "name": "@nnischal95/react-quiz-component",
+  "version": "0.4.0",
   "description": "React Quiz Component",
   "main": "lib/Quiz.js",
   "scripts": {
@@ -8,16 +8,17 @@
     "lib": "babel src/lib -d lib --copy-files",
     "lib:watch": "babel src/lib -w -d lib --copy-files",
     "docs": "webpack-dev-server --mode development",
-    "docs:prod": "webpack --mode production"
+    "docs:prod": "webpack --mode production",
+    "build": "./node_modules/.bin/webpack --mode production"
   },
   "keywords": [
     "react",
+    
     "reactjs",
     "react-quiz-component",
     "react-quiz",
     "quiz"
   ],
-  "license": "MIT",
   "peerDependencies": {
     "react": "^15.3.0 || ^16.2.0",
     "react-dom": "^15.3.0 || ^16.2.0"
@@ -41,11 +42,12 @@
     "webpack-dev-server": "^3.11.0",
     "prop-types": "^15.7.2"
   },
-  "author": "WONG, Wing Kam <wingkwong.code@gmail.com>",
-  "homepage": "https://github.com/wingkwong/react-quiz-component",
+  "author": "Nimesh Nischal <n.nischal.1994@gmail.com>",
+  "homepage": "https://github.com/nimeshnischal/react-quiz-component",
   "repository": {
     "type": "git",
-    "url": "https://github.com/wingkwong/react-quiz-component.git"
+    "url": "ssh://git@github.com:nimeshnischal/react-quiz-component.git",
+    "directory": "@nimeshnischal/react-quiz-component"
   },
   "dependencies": {
     "dompurify": "^2.0.8",
