--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^15.3.0 || ^16.2.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
