--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@saukale21/react-quiz-component",
-  "version": "0.1.0",
+  "name": "@myacademic/react-quiz-component",
+  "version": "0.1.3",
   "description": "React Quiz Component",
-  "main": "lib/Quiz.js",
+  "main": "src/lib/Quiz.js",
   "scripts": {
     "dev": "concurrently \"npm run lib:watch\" \"npm run docs\"",
     "lib": "babel src/lib -d lib --copy-files",
@@ -29,6 +29,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.5",
     "concurrently": "^3.5.1",
     "css-loader": "^3.4.2",
@@ -37,9 +38,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.20.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.13.3"
   },
   "author": "Academic EDM",
   "homepage": "https://github.com/AcademicEDM/edm-quiz",
