--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@myacademic/react-quiz-component",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "React Quiz Component",
-  "main": "src/lib/Quiz.js",
+  "main": "lib/Quiz.js",
   "scripts": {
     "dev": "concurrently \"npm run lib:watch\" \"npm run docs\"",
     "lib": "babel src/lib -d lib --copy-files",
@@ -35,8 +35,8 @@
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^5.5.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "style-loader": "^0.21.0",
     "webpack": "^5.20.0",
     "webpack-cli": "^4.7.2",
@@ -51,6 +51,6 @@
   },
   "dependencies": {
     "dompurify": "^2.0.8",
-    "marked": "^4.3.0"
+    "marked": "^0.7.0"
   }
 }
