--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-quiz-component",
-  "version": "0.8.2",
+  "name": "@myacademic/react-quiz-component",
+  "version": "0.4.2",
   "description": "React Quiz Component",
   "main": "lib/Quiz.js",
   "scripts": {
