--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lib:watch": "babel src/lib -w -d lib --copy-files",
     "docs": "webpack-dev-server --mode development",
     "docs:prod": "webpack --mode production",
-    "build": "./node_modules/.bin/webpack --mode production"
+    "build": "./node_modules/.bin/webpack --mode production",
+    "make": "babel src/lib -d lib --copy-files && babel src/lib -d src/lib && webpack --mode production"
   },
   "keywords": [
     "react",
